some minor functionality for file approval thesis